Fixed UI alignment for large numbers #189

--- a/OpenBudgeteer.Blazor/wwwroot/css/custom.css
+++ b/OpenBudgeteer.Blazor/wwwroot/css/custom.css
@@ -31,7 +31,7 @@ table .header-row td, table .header-row th {
     text-align: right;
 }
 .col-bucket-numbers {
-    width: 90px;
+    width: 120px;
 }
 .col-buttons {
     text-align: right;
